# geocleaner

./: .buildinfo  .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  environment.yml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  test.py
.doctrees/: environment.pickle  index.doctree  modules.doctree
.github/workflows/: pypi-publish.yml
_sources/: index.rst.txt  modules.rst.txt
docs/: from geocleaner.py  requirements.txt
docs/source/: conf.py  index.rst
geoaddresscleaner/: core.py
geocleaner/: __init__.py  core.py
geocleaner/tests/: test_core.py
tests/: test_core.py
